--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pubsub,",
     "es6",
     "javascript",
-    "postcss", "parcel"
+    "postcss",
+    "parcel"
   ],
   "author": "",
   "license": "ISC",
@@ -37,7 +38,8 @@
     "postcss-simple-vars": "^5.0.2",
     "postcss-url": "^8.0.0",
     "pubsub-js": "^1.7.0",
-    "riot": "^3.13.2"
+    "riot": "^3.13.2",
+    "json-server": "^0.15.1"
   },
   "staticFiles": {
     "watcherGlob": "**"
